--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0oIBcRHhCxJhQI3xd2cBbJ?utm_source=generator" width="75%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>    
     </div>
     
-
+    <separator>-</separator>
 
     <div style="display: flex; justify-content: center; align-items: center;">
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1kKy2YHWqKZrSR83rJ73az?utm_source=generator" width="75%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>    
