--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
         </div>
 
         <div class="team-member">
-            <img src="hexit/underseatricks.webp" alt="Member 1">
-            <p class="name">template</p>
-            <a class="teaminfo">JellyJam</a>
+            <img src="hexit/marsfall.webp" alt="Member 1">
+            <p class="name">Marsfall</p>
+            <a class="teaminfo">Brackeys 2024</a>
             <div class="separator"></div>
-            <a href="underseatricks.html"  class="buy-button">Read</a>
+            <a href="marsfall.html"  class="buy-button">Read</a>
         </div>
 
 
