--- a/marsfall.html
+++ b/marsfall.html
@@ -69,7 +69,7 @@
             <h2>About Sound Design</h2>
             <p>
                All Sounds in this game were made by me and my friend Dawid Blacharski. 
-               We started from scratch, making sounds of pipes, ambients, cables, elctricity and a lot more
+               We started from scratch, making sounds of pipes, ambients, cables, electricity and a lot more
             </p>
         </div>
     </section>
