--- a/index.html
+++ b/index.html
@@ -92,14 +92,16 @@
 
 
         <div class="team-member">
-            <img src="hexit/platformer.webp" alt="Member 1">
+            <a href="orbsandspirits.html">
+            <img src="hexit/platformer.webp" alt="Member 1"></a>
             <p class="name">Orbs and Spirits</p>
             <a class="teaminfo">8BitJelly</a>
             <div class="separator"></div>
             <a href="orbsandspirits.html"  class="buy-button">Read</a>
         </div>
         <div class="team-member">
-            <img src="hexit/underseatricks.webp" alt="Member 1">
+            <a href="underseatricks.html">
+            <img src="hexit/underseatricks.webp" alt="Member 1"></a>
             <p class="name">UnderSeaTricks</p>
             <a class="teaminfo">8BitJelly</a>
             <div class="separator"></div>
@@ -107,7 +109,8 @@
         </div>
 
         <div class="team-member">
-            <img src="hexit/marsfall.webp" alt="Member 1">
+            <a href="marsfall.html">
+            <img src="hexit/marsfall.webp" alt="Member 1"></a>
             <p class="name">Marsfall</p>
             <a class="teaminfo">Brackeys 2024</a>
             <div class="separator"></div>
@@ -115,7 +118,8 @@
         </div>
 
         <div class="team-member">
-            <img src="hexit/hine gif gierki.gif"alt="Member 1">
+            <a href="spirit.html">
+            <img src="hexit/hine gif gierki.gif"alt="Member 1"> </a>
             <p class="name">Spirits</p>
             <a class="teaminfo">among the trees</a>
             <div class="separator"></div>
