--- a/spirit.html
+++ b/spirit.html
@@ -54,7 +54,7 @@
             <p class="name">Spirits Among the trees</p>
             <a class="teaminfo">JellyJam 2024</a>
             <div class="separator"></div>
-            <a href="https://blumi-dev.itch.io/marsfall"  class="buy-button">Play</a>
+            <a href="https://mega.nz/file/lUNghJLS#KXJDciztTuPDOzfny_ZYXwtltjXu9ICL-s13sfa9vKM"  class="buy-button">Play</a>
         </div>
 
 
@@ -147,9 +147,6 @@
     </div>
 -->
     <div class="separatorsecond">-</div>
-    <div class="buttonlink">
-        <a href="link do gry" class="buy-button">Play</a>
-      </div>
 
 
 
