--- a/spirit.html
+++ b/spirit.html
@@ -54,7 +54,7 @@
             <p class="name">Spirits Among the trees</p>
             <a class="teaminfo">JellyJam 2024</a>
             <div class="separator"></div>
-            <a href="https://mega.nz/file/lUNghJLS#KXJDciztTuPDOzfny_ZYXwtltjXu9ICL-s13sfa9vKM"  class="buy-button">Play</a>
+            <a href="https://voxten.itch.io/spirits-among-the-trees"  class="buy-button">Play</a>
         </div>
 
 
