forest maze labirynt

--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
             <a href="spirit.html"  class="buy-button">Read</a>
         </div>
 
+        <div class="team-member">
+            <a href="forestmaze.html">
+            <img src="hexit/forestmaze/forestmazelogo.webp"alt="Member 1"> </a>
+            <p class="name">Forest Maze</p>
+            <a class="teaminfo">JellyJam 2024</a>
+            <div class="separator"></div>
+            <a href="spirit.html"  class="buy-button">Read</a>
+        </div>
+
     </section>
 
     <section class="owners">
