--- a/spirit.html
+++ b/spirit.html
@@ -59,7 +59,7 @@
 
 
         <div class="indexpromo-image-section">
-            <img src="hexit/spiritfull.png" alt="Obrazek bez tła">
+            <img src="hexit/bg.png" alt="Obrazek bez tła">
           </div>
 
     </section>
@@ -129,15 +129,18 @@
         <div class="separatorsecond">-</div>
 
     <div class="gallery">
-        <img src="hexit/spirit1.webp" alt="Zdjęcie 1">
-        <img src="hexit/spirit2.webp" alt="Zdjęcie 1">
-        <img src="hexit/spirit6.webp" alt="Zdjęcie 1">
-        <img src="hexit/spirit4.webp" alt="Zdjęcie 1">
-        <img src="hexit/spirit5.webp" alt="Zdjęcie 1">
-        <img src="hexit/spirit3.webp" alt="Zdjęcie 1">
-        <img src="hexit/spirit7 (1).webp" alt="Zdjęcie 1">
-    </div>
+        <img src="hexit/1 (1).png" alt="Zdjęcie 1">
+        <img src="hexit/1 (2).png" alt="Zdjęcie 1">
+        <img src="hexit/1 (3).png" alt="Zdjęcie 1">
+        <img src="hexit/1 (4).png" alt="Zdjęcie 1">
+        <img src="hexit/1 (5).png" alt="Zdjęcie 1">
+       <!-- <img src="hexit/2 (1).png" alt="Zdjęcie 1">
+        <img src="hexit/2 (2).png" alt="Zdjęcie 1">-->
 
+    </div>
+    <div class="artybyclass">
+    <a href="https://linktr.ee/hinneo" class="artby">Arts by @hinneo</a>
+</div>
 
 
     <div class="separatorsecond">-</div>
