--- a/index.html
+++ b/index.html
@@ -162,7 +162,11 @@
     </div>
 
     <div class="separatorsecond">-</div>
-
+    <div class="separatorsecond">-</div>
+    <div class="separatorsecond">-</div>
+    <div class="separatorsecond">-</div>
+    <div class="separatorsecond">-</div>
+    <div class="separatorsecond">-</div>
     <script src="scripts.js"></script>
 
     <footer>
