--- a/spirit.html
+++ b/spirit.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spirits Among the trees</title>
+    <title>Spirits Among the trees</title>  <!-- tu tytułs trony ale na pasku w przeglądarce  -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <a href="index.html">
-                <img src="logohexit.webp" alt="Nox Audios Logo" class="logo" >
+                <img src="logohexit.webp" alt="Nox Audios Logo" class="logo" ><!--  tu logo -->
                 </a>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>                                    <!-- podmień na linki swoje aby podpiąć sociale do menu  -->
                 <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
                 <li><a href="https://maps.app.goo.gl/71z3TfWLPRXDnVmP6">Contact</a></li>
             </ul>
