--- a/index.html
+++ b/index.html
@@ -133,7 +133,16 @@
             <p class="name">Forest Maze</p>
             <a class="teaminfo">JellyJam 2024</a>
             <div class="separator"></div>
-            <a href="spirit.html"  class="buy-button">Read</a>
+            <a href="forestmaze.html"  class="buy-button">Read</a>
+        </div>
+
+        <div class="team-member">
+            <a href="hexforest.html">
+            <img src="hexit/HexForest/hf logo.webp"alt="Member 1"> </a>
+            <p class="name">Hex Forest</p>
+            <a class="teaminfo">JellyJam 2024</a>
+            <div class="separator"></div>
+            <a href="hexforest.html"  class="buy-button">Read</a>
         </div>
 
     </section>
