--- a/orbsandspirits.html
+++ b/orbsandspirits.html
@@ -173,7 +173,7 @@
         <img src="hexit/platformer/p4.webp" alt="Zdjęcie 1">
        <!-- <img src="hexit/2 (1).png" alt="Zdjęcie 1">
         <img src="hexit/2 (2).png" alt="Zdjęcie 1">-->
-
+</div>
 
 
     <div class="separatorsecond">-</div>
