--- a/Blog.html
+++ b/Blog.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="H3xit.html">
-                <img src="logohexit.webp" alt="hexit Logo" class="logo" >   <!--  tu logo -->
+                <img src="logohexit.webp" alt="Olaf HExit Rely zawadzki Logo" class="logo" >   <!--  tu logo -->
                 </a>
             <ul>                                                                                <!-- podmień na linki swoje aby podpiąć sociale do menu  -->
                 <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
