--- a/forestmaze.html
+++ b/forestmaze.html
@@ -20,14 +20,6 @@
         </nav>
 
 
-        <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-NF44Q585');</script>
-    <!-- End Google Tag Manager -->
-
     
     </header>
     <section class="banner">
@@ -35,22 +27,12 @@
     </section>
    
 
-   
-    <section class="founders">
-        <div class="founder">
-            <!--<img src="noxone1.webp" alt="Pack"> -->
-            <h3 class="teaminfo"></h3>
-            <p></p>
-        </div>
-        
-    </section>
-
     <section class="team">
 
 
 
         <div class="team-member">
-            <img src="hexit/forestmaze/forestmazelogo.webp" alt="Member 1">
+            <img src="hexit/forestmaze/forestmazelogo.webp" alt="Forest Maze">
             <p class="name">Forest Maze</p>
             <a class="teaminfo">JellyJam 2024</a>
             <div class="separator"></div>
@@ -116,24 +98,17 @@
         <div class="separatorsecond">-</div>
 
     <div class="gallery">
-        <img src="hexit/forestmaze/fm1.webp" alt="Zdjęcie 1">
-        <img src="hexit/forestmaze/fm2.webp" alt="Zdjęcie 1">
-        <img src="hexit/forestmaze/fm3.webp" alt="Zdjęcie 1">
-       <!--  <img src="hexit/1 (4).png" alt="Zdjęcie 1">
-        <img src="hexit/1 (5).png" alt="Zdjęcie 1">
-       <img src="hexit/2 (1).png" alt="Zdjęcie 1">
-        <img src="hexit/2 (2).png" alt="Zdjęcie 1">-->
+        <img src="hexit/forestmaze/fm1.webp" alt="Forest Maze">
+        <img src="hexit/forestmaze/fm2.webp" alt="Forest Maze">
+        <img src="hexit/forestmaze/fm3.webp" alt="Forest Maze">
+
 
     </div>
 
 
 
     <div class="separatorsecond">-</div>
-<!--
-    <div style="display: flex; justify-content: center; align-items: center;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ORmkbywY0o8?si=P6-WpJxPRHI4ZWW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
--->
+
     <div class="separatorsecond">-</div>
 
 
@@ -154,10 +129,6 @@
     </footer>
 
 
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF44Q585"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
 
 
 </body>
