--- a/hexforest.html
+++ b/hexforest.html
@@ -20,37 +20,20 @@
         </nav>
 
 
-        <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-NF44Q585');</script>
-    <!-- End Google Tag Manager -->
 
     
     </header>
     <section class="banner">
         <h1>Hex Forest</h1>
     </section>
-   
 
-   
-    <section class="founders">
-        <div class="founder">
-            <!--<img src="noxone1.webp" alt="Pack"> -->
-            <h3 class="teaminfo"></h3>
-            <p></p>
-        </div>
-        
-    </section>
 
     <section class="team">
 
 
 
         <div class="team-member">
-            <img src="hexit/HexForest/hf logo.webp" alt="Member 1">
+            <img src="hexit/HexForest/hf logo.webp" alt="Hex Forest">
             <p class="name">Hex Forest</p>
             <a class="teaminfo">JellyJam 2024</a>
             <div class="separator"></div>
@@ -162,22 +145,18 @@
         <div class="separatorsecond">-</div>
 
     <div class="gallery">
-        <img src="hexit/HexForest/hf2.png" alt="Zdjęcie 1">
-        <img src="hexit/HexForest/hf3.png" alt="Zdjęcie 1">
-        <img src="hexit/HexForest/hf4.png" alt="Zdjęcie 1">
-        <img src="hexit/HexForest/hf5.png" alt="Zdjęcie 1">
-        <img src="hexit/HexForest/hf1.jpg" alt="Zdjęcie 1">
+        <img src="hexit/HexForest/hf2.png" alt="Hex Forest">
+        <img src="hexit/HexForest/hf3.png" alt="Hex Forest">
+        <img src="hexit/HexForest/hf4.png" alt="Hex Forest">
+        <img src="hexit/HexForest/hf5.png" alt="Hex Forest">
+        <img src="hexit/HexForest/hf1.jpg" alt="Hex Forest">
 
     </div>
 
 
 
     <div class="separatorsecond">-</div>
-<!--
-    <div style="display: flex; justify-content: center; align-items: center;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ORmkbywY0o8?si=P6-WpJxPRHI4ZWW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
--->
+
     <div class="separatorsecond">-</div>
 
 
@@ -198,10 +177,6 @@
     </footer>
 
 
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF44Q585"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
 
 
 </body>
