--- a/index.html
+++ b/index.html
@@ -19,14 +19,6 @@
             </ul>
         </nav>
 
-                                                                                   <!--  usuń to -->
-        <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-NF44Q585');</script>
-    <!-- End Google Tag Manager -->                                                      <!--  do tego miejsca bo to do google aby statystyki zbierać -->
 
     
     </header>
@@ -40,7 +32,7 @@
    
     <section class="founders">
         <div class="founder">
-            <img src="hexit.webp" alt="Hexit">                          <!-- opis siebie  -->
+            <img src="hexit.webp" alt="Olaf Hexit Rely Zawadzki">                          <!-- opis siebie  -->
             <p class="name">Olaf "Hexit Rely" Zawadzki</p>
             <a class="teaminfo">Music producer, Sound Designer</a>
             <p></p>
@@ -57,13 +49,13 @@
             <img src="instagram.webp" alt="instagram">
         </a>
         <a href="https://www.tiktok.com/@hexit_official" class="tt" target="_blank">
-            <img src="tiktok.webp" alt="tt">
+            <img src="tiktok.webp" alt="tiktok">
         </a>
         <a href="https://open.spotify.com/artist/4hcXADTFvPXtRxVTGYXW4I?si=PtVSpKbdTgS1t2JG468iXA&nd=1" class="Spoti" target="_blank">
             <img src="spotify.webp" alt="Spoti">
         </a>
         <a href="https://www.youtube.com/channel/UCIpPTE3HsmUSAb-yfNybvSA" class="yt" target="_blank">
-            <img src="youtube.webp" alt="yt">
+            <img src="youtube.webp" alt="YouTube">
         </a>
     </div>
 
@@ -72,12 +64,6 @@
         <p>Our website uses cookies to improve the quality of services. Read ours <a href="polityka.html">Privacy Policy</a>.</p>            <!-- musze ci podrzucić stronke o polityce ale to musze ja zrobić  -->
         <button id="acceptButton">Accept</button>
     </div>
-
-    <!--<section class="owners">
-        <h2>Sound Design in Games</h2>
-    </section>
--->
-
 
 
   
@@ -89,7 +75,7 @@
 
         <div class="team-member">
             <a href="orbsandspirits.html">
-            <img src="hexit/platformer.webp" alt="Member 1"></a>
+            <img src="hexit/platformer.webp" alt="Orbies and Spirits"></a>
             <p class="name">Orbs and Spirits</p>
             <a class="teaminfo">8BitJelly</a>
             <div class="separator"></div>
@@ -97,7 +83,7 @@
         </div>
         <div class="team-member">
             <a href="underseatricks.html">
-            <img src="hexit/underseatricks.webp" alt="Member 1"></a>
+            <img src="hexit/underseatricks.webp" alt="underseatricks"></a>
             <p class="name">UnderSeaTricks</p>
             <a class="teaminfo">8BitJelly</a>
             <div class="separator"></div>
@@ -106,7 +92,7 @@
 
         <div class="team-member">
             <a href="marsfall.html">
-            <img src="hexit/marsfall.webp" alt="Member 1"></a>
+            <img src="hexit/marsfall.webp" alt="Marsfall"></a>
             <p class="name">Marsfall</p>
             <a class="teaminfo">Brackeys 2024</a>
             <div class="separator"></div>
@@ -115,7 +101,7 @@
 
         <div class="team-member">
             <a href="spirit.html">
-            <img src="hexit/hine gif gierki.gif"alt="Member 1"> </a>
+            <img src="hexit/hine gif gierki.gif"alt="Spirits Among the trees"> </a>
             <p class="name">Spirits</p>
             <a class="teaminfo">among the trees</a>
             <div class="separator"></div>
@@ -124,7 +110,7 @@
 
         <div class="team-member">
             <a href="forestmaze.html">
-            <img src="hexit/forestmaze/forestmazelogo.webp"alt="Member 1"> </a>
+            <img src="hexit/forestmaze/forestmazelogo.webp"alt="Forest maze"> </a>
             <p class="name">Forest Maze</p>
             <a class="teaminfo">JellyJam 2024</a>
             <div class="separator"></div>
@@ -133,7 +119,7 @@
 
         <div class="team-member">
             <a href="hexforest.html">
-            <img src="hexit/HexForest/hf logo.webp"alt="Member 1"> </a>
+            <img src="hexit/HexForest/hf logo.webp"alt="Hex Forest"> </a>
             <p class="name">Hex Forest</p>
             <a class="teaminfo">JellyJam 2024</a>
             <div class="separator"></div>
@@ -185,13 +171,5 @@
             </ul>
         </div>
     </footer>
-
-                                                                                               <!-- Wywal  -->
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF44Q585"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->                                                         <!--  Wywal -->
-
-
 </body>
 </html>
