--- a/orbsandspirits.html
+++ b/orbsandspirits.html
@@ -20,13 +20,6 @@
         </nav>
 
 
-        <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-NF44Q585');</script>
-    <!-- End Google Tag Manager -->
 
     
     </header>
@@ -39,7 +32,7 @@
 
 
         <div class="team-member">
-            <img src="hexit/platformer.webp" alt="Member 1">
+            <img src="hexit/platformer.webp" alt="Orbies and Spirits">
             <p class="name">Orbies and Spirits</p>
             <a class="teaminfo">8bitjelly</a>
             <div class="separator"></div>
@@ -48,7 +41,7 @@
 
 
         <div class="indexpromo-image-section">
-            <img src="hexit/platformer/image (7).png" alt="Obrazek bez tła">
+            <img src="hexit/platformer/image (7).png" alt="Orbies and Spirits background">
           </div>
 
     </section>
@@ -167,21 +160,16 @@
         <div class="separatorsecond">-</div>
 
     <div class="gallery">
-        <img src="hexit/platformer/p1.webp" alt="Zdjęcie 1">
-        <img src="hexit/platformer/p2.webp" alt="Zdjęcie 1">
-        <img src="hexit/platformer/p3.webp" alt="Zdjęcie 1">
-        <img src="hexit/platformer/p4.webp" alt="Zdjęcie 1">
-       <!-- <img src="hexit/2 (1).png" alt="Zdjęcie 1">
-        <img src="hexit/2 (2).png" alt="Zdjęcie 1">-->
+        <img src="hexit/platformer/p1.webp" alt="Orbies and Spirits">
+        <img src="hexit/platformer/p2.webp" alt="Orbies and Spirits">
+        <img src="hexit/platformer/p3.webp" alt="Orbies and Spirits">
+        <img src="hexit/platformer/p4.webp" alt="Orbies and Spirits">
+
 </div>
 
 
     <div class="separatorsecond">-</div>
-<!--
-    <div style="display: flex; justify-content: center; align-items: center;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ORmkbywY0o8?si=P6-WpJxPRHI4ZWW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
--->
+
     <div class="separatorsecond">-</div>
 
 
@@ -202,10 +190,6 @@
     </footer>
 
 
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF44Q585"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
 
 
 </body>
