--- a/spirit.html
+++ b/spirit.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="index.html">
-                <img src="logohexit.webp" alt="Nox Audios Logo" class="logo" ><!--  tu logo -->
+                <img src="logohexit.webp" alt="Olaf Hexit Rely Zawadzki" class="logo" ><!--  tu logo -->
                 </a>
             <ul>
                 <li><a href="index.html">Home</a></li>                                    <!-- podmień na linki swoje aby podpiąć sociale do menu  -->
@@ -20,13 +20,6 @@
         </nav>
 
 
-        <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-NF44Q585');</script>
-    <!-- End Google Tag Manager -->
 
     
     </header>
@@ -35,22 +28,13 @@
     </section>
    
 
-   
-    <section class="founders">
-        <div class="founder">
-            <!--<img src="noxone1.webp" alt="Pack"> -->
-            <h3 class="teaminfo"></h3>
-            <p></p>
-        </div>
-        
-    </section>
 
     <section class="team">
 
 
 
         <div class="team-member">
-            <img src="hexit/hine gif gierki.gif" alt="Member 1">
+            <img src="hexit/hine gif gierki.gif" alt="Spirits Among the trees">
             <p class="name">Spirits Among the trees</p>
             <a class="teaminfo">JellyJam 2024</a>
             <div class="separator"></div>
@@ -129,13 +113,12 @@
         <div class="separatorsecond">-</div>
 
     <div class="gallery">
-        <img src="hexit/1 (1).png" alt="Zdjęcie 1">
-        <img src="hexit/1 (2).png" alt="Zdjęcie 1">
-        <img src="hexit/1 (3).png" alt="Zdjęcie 1">
-        <img src="hexit/1 (4).png" alt="Zdjęcie 1">
-        <img src="hexit/1 (5).png" alt="Zdjęcie 1">
-       <!-- <img src="hexit/2 (1).png" alt="Zdjęcie 1">
-        <img src="hexit/2 (2).png" alt="Zdjęcie 1">-->
+        <img src="hexit/1 (1).png" alt="Spirits Among the trees">
+        <img src="hexit/1 (2).png" alt="Spirits Among the trees">
+        <img src="hexit/1 (3).png" alt="Spirits Among the trees">
+        <img src="hexit/1 (4).png" alt="Spirits Among the trees">
+        <img src="hexit/1 (5).png" alt="Spirits Among the trees">
+
 
     </div>
     <div class="artybyclass">
@@ -144,11 +127,7 @@
 
 
     <div class="separatorsecond">-</div>
-<!--
-    <div style="display: flex; justify-content: center; align-items: center;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ORmkbywY0o8?si=P6-WpJxPRHI4ZWW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
--->
+
     <div class="separatorsecond">-</div>
 
 
@@ -169,10 +148,6 @@
     </footer>
 
 
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF44Q585"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
 
 
 </body>
