--- a/marsfall.html
+++ b/marsfall.html
@@ -20,13 +20,6 @@
         </nav>
 
 
-        <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-NF44Q585');</script>
-    <!-- End Google Tag Manager -->
 
     
     </header>
@@ -35,22 +28,12 @@
     </section>
    
 
-   
-    <section class="founders">
-        <div class="founder">
-            <!--<img src="noxone1.webp" alt="Pack"> -->
-            <h3 class="teaminfo"></h3>
-            <p></p>
-        </div>
-        
-    </section>
-
     <section class="team">
 
 
 
         <div class="team-member">
-            <img src="hexit/marsfall.webp" alt="Member 1">
+            <img src="hexit/marsfall.webp" alt="Marsfall">
             <p class="name">Marsfall</p>
             <a class="teaminfo">Brackeys 2024</a>
             <div class="separator"></div>
@@ -116,11 +99,6 @@
         </div>
     </footer>
 
-
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF44Q585"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
 
 
 </body>
