--- a/hexforest.html
+++ b/hexforest.html
@@ -16,6 +16,8 @@
                 <li><a href="index.html">Home</a></li>             <!-- podmień na linki swoje aby podpiąć sociale do menu  -->
                 <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
                 <li><a href="https://maps.app.goo.gl/71z3TfWLPRXDnVmP6">Contact</a></li>
+                <li><a href="offert.html">Offert</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
 
