--- a/post2.html
+++ b/post2.html
@@ -16,6 +16,8 @@
                 <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
                 <li><a href="https://open.spotify.com/artist/4hcXADTFvPXtRxVTGYXW4I?si=PtVSpKbdTgS1t2JG468iXA&nd=1">Spotify</a></li>
                 <li><a href="https://maps.app.goo.gl/71z3TfWLPRXDnVmP6">Contact</a></li>
+                <li><a href="offert.html">Offert</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
 
