--- a/offert.html
+++ b/offert.html
@@ -67,46 +67,46 @@
     <div class="offer-container">
         <!-- Mix Mastering -->
         <div class="offer-tile mint">
-          <h2>Mix Mastering</h2>
-          <p>Profesjonalny miks i mastering twojej muzyki.</p>
-          <p>Co zawiera:</p>
+          <h2>🎶BASIC🎶</h2>
+          <h3>Mix And Mastering.</h3>
+          <p>Whats included:</p>
           <ul>
-            <li>Podstawowa korekcja</li>
-            <li>Finalny Mix Mastering wraz z wybranymi efektami</li>
-            <li>5 poprawek w cenie</li>
+            <li>Basic Correction</li>
+            <li>Final Mix & Mastering  with effects</li>
+            <li>5 corrections included in the price</li>
           </ul>
-          <p class="price">Cena: Od 100 zł</p>
-          <a href="#" class="buy-button">Wyślij Wiadomość</a>
+          <p class="price">PRICE: 100 PLN</p>
+          <p class="price">ps. Send me link to your track upladed on wetransfer.com</p>
+          <a href="https://pay.sumup.com/b2c/Q6KEWYNZ" class="buy-button">BUY</a>
         </div>
       
         <!-- Instrumental -->
         <div class="offer-tile blue">
-          <h2>Instrumental</h2>
-          <p>Tworzenie profesjonalnego podkładu muzycznego.</p>
-          <p>Co zawiera:</p>
+          <h2>🎹MEDIUM🎹</h2>
+          <h3>Mix And Mastering for you.</h3>
+          <p>Whats included:</p>
           <ul>
-            <li>Wszystko co w Mix Mastering</li>
-            <li>Mix Mastering podkładu</li>
-            <li>Pełne Wsparcie</li>
-            <li>10 poprawek w cenie</li>
+            <li>Everythink from BASIC</li>
+            <li>Individual approach</li>
+            <li>Full Supprt</li>
+            <li>5 corrections included in the price</li>
           </ul>
-          <p class="price">Cena: Od 180 zł</p>
+          <p class="price">Price? individual pricing from PLN 100 and up</p>
           <a href="#" class="buy-button">Wyślij Wiadomość</a>
         </div>
       
         <!-- All in One -->
         <div class="offer-tile gold">
-          <h2>All in One</h2>
-          <p>Pełna produkcja muzyczna od A do Z.</p>
-          <p>Co zawiera:</p>
+          <h2>🎵PRO🎵</h2>
+          <h3>Track Specific for you</h3>
+          <p>Whats included:</p>
           <ul>
-            <li>Wszystko co w Instrumental</li>
-            <li>Instrumental</li>
-            <li>Mix i Mastering</li>
-            <li>Do 25 poprawek w cenie</li>
-            <li>Wsparcie</li>
+            <li>Everythink from MEDIUM</li>
+            <li>Active cooperation</li>
+            <li>unlimited previews</li>
+            <li>5 corrections included in the price</li>
           </ul>
-          <p class="price">Cena: Od 250 zł</p>
+          <p class="price">Price? individual pricing from 250 PLN and up</p>
           <a href="#" class="buy-button">Wyślij Wiadomość</a>
         </div>
       </div>
