--- a/portfolio.html
+++ b/portfolio.html
@@ -140,6 +140,15 @@
 
 
         <div class="team-member">
+            <a href="EL.html">
+            <img src="hexit/EL1.webp" alt="Elemental_Labirynth"></a>
+            <p class="name">Elemental</p>
+            <a class="teaminfo">Labirynth</a>
+            <div class="separator"></div>
+            <a href="EL.html"  class="buy-button">Read</a>
+        </div>
+
+        <div class="team-member">
             <a href="orbsandspirits.html">
             <img src="hexit/platformer.webp" alt="Orbies and Spirits"></a>
             <p class="name">Orbs and Spirits</p>
