--- a/EL.html
+++ b/EL.html
@@ -36,7 +36,7 @@
 
 
         <div class="team-member">
-            <img src="hexit/EL1.webp" alt="Elemental_Labirynth">
+            <img src="hexit/ELmini.webp" alt="Elemental_Labirynth">
             <p class="name">Elemental</p>
             <a class="teaminfo">Labirynth</a>
             <div class="separator"></div>
