--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,7 @@
 
         <div class="team-member">
             <a href="EL.html">
-            <img src="hexit/EL1.webp" alt="Elemental_Labirynth"></a>
+            <img src="hexit/ELmini.webp" alt="Elemental_Labirynth"></a>
             <p class="name">Elemental</p>
             <a class="teaminfo">Labirynth</a>
             <div class="separator"></div>
