--- a/portfolio.html
+++ b/portfolio.html
@@ -131,7 +131,7 @@
                         </div>
                     </div>
 
-                  <   <div class="release-card">
+                    <div class="release-card">
                         <div class="release-image">
                             <img src="hexit/mmtlddiya.png"" alt="Diya My Mother Told ME">
                             <div class="release-overlay">
